SERVER-14144 Aggregation cursor error shouldn't swallow Runner error